Cleanup and format a few files.
git-svn-id: https://svn.apache.org/repos/asf/incubator/stanbol/trunk/fise@1044386 13f79535-47bb-0310-9956-ffa450edef68